# CnC_Remastered_Collection

./: .clang-format  .gitignore  CMakeLists.txt
RedAlert/: CMakeLists.txt  function.h  jshell.h  sha.h  wwfile.h
TiberianDawn/: CMakeLists.txt
scripts/: create_compile_commands.json.py
